Fix nav alignment

--- a/themes/flo.stellbr.ink/static/css/style.css
+++ b/themes/flo.stellbr.ink/static/css/style.css
@@ -25,6 +25,9 @@ nav {
   grid-row: 1;
   grid-column-start: 2;
   grid-column-end: 4;
+  display: flex;
+  justify-content: flex-start;
+  gap: 1em;
 }
 
 main {
@@ -69,6 +72,7 @@ main {
   nav {
     grid-row: 1;
     grid-column: 3;
+    justify-content: flex-end;
   }
 
   .sidebar {
@@ -82,6 +86,7 @@ main {
     grid-row: 1;
     grid-column-start: 2;
     grid-column-end: 4;
+    justify-content: flex-start;
   }
 
   .sidebar {
@@ -120,7 +125,6 @@ main {
 .underline {
   position: relative;
   text-decoration: unset;
-  margin-right: 1em;
 }
 
 .underline:before {
